# scotus-dataset

./: .pre-commit-config.yaml  README.md  models.py  pyproject.toml  pyrightconfig.json  recon.py  scdb.py  settings.py  transcripts.py
.github/workflows/: ci.yml
scotus_dataset/: __init__.py  models.py  recon.py  scdb.py  settings.py  transcripts.py
tests/: test_basic.py  test_models.py  test_recon.py  test_scdb.py  test_settings.py
