[project]
name = "scotus-dataset"
version = "0.1.0"
requires-python = ">=3.10"
description = "SCOTUS dataset utilities"
authors = [{name = "Unknown"}]
readme = "README.md"
dependencies = [
  "peewee",
  "pandas",
  "pdfminer.six",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "pyright",
  "pre-commit",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"

[tool.ruff]
line-length = 88
extend-exclude = [
  "transcripts.py",
  "models.py",
  "recon.py",
  "scdb.py",
]

[tool.coverage.run]
omit = [
    "recon.py",
    "scdb.py",
    "transcripts.py",
    "models.py",
    "tests/*",
]

