[project]
name = "scotus-dataset"
version = "0.1.0"
requires-python = ">=3.10"
description = "SCOTUS dataset utilities"
authors = [{name = "Unknown"}]
readme = "README.md"
dependencies = [
  "peewee",
  "pandas",
  "pdfminer.six",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "pyright",
  "pre-commit",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing"

[tool.ruff]
line-length = 88
extend-exclude = [
  "scotus_dataset/transcripts.py",
  "scotus_dataset/models.py",
  "scotus_dataset/recon.py",
  "scotus_dataset/scdb.py",
]

[tool.coverage.run]
omit = [
    "scotus_dataset/recon.py",
    "scotus_dataset/scdb.py",
    "scotus_dataset/transcripts.py",
    "scotus_dataset/models.py",
    "tests/*",
]

